--- a/webhook_logger.services.yml
+++ b/webhook_logger.services.yml
@@ -1,6 +1,6 @@
 services:
   logger.slack:
     class: Drupal\webhook_logger\Logger\SlackLogger
-    arguments: ['@logger.log_message_parser', '@http_client']
+    arguments: ['@logger.log_message_parser', '@http_client', '@config.factory']
     tags:
       - { name: logger }
