WIP: More tests
This isn't working for some messages. Escaping?

--- a/webhook_logger.services.yml
+++ b/webhook_logger.services.yml
@@ -1,6 +1,6 @@
 services:
   logger.slack:
     class: Drupal\webhook_logger\Logger\SlackLogger
-    arguments: ['@logger.log_message_parser', '@http_client', '@config.factory']
+    arguments: ['@logger.log_message_parser', '@http_client', '@config.factory', '@entity_type.manager']
     tags:
       - { name: logger }
